--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sudhir25102001@gmail.com
-spring.mail.password=qthxxryfowvxeagr
+spring.mail.password=**************** #Password i have changed for sequrity purpose.
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
